test/cases/compile_errors/function_type_named.zig
const aFunc = fn someFunc(x: i32) void;

// error
// backend=stage2
// target=native
//
// :1:18: error: function type cannot have a name
